--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,10 +44,11 @@ jobs:
           echo "HUGGINGFACE_ACCESS_TOKEN=${{ secrets.HUGGINGFACE_ACCESS_TOKEN }}" >> $GITHUB_ENV
           echo "RELEASE_VERSION=${GITHUB_REF##refs/heads/}" | sed 's/\//-/g' >> $GITHUB_ENV
 
-      - name: Build and push the images to Docker Hub
+      - name: Build and push the base image to Docker Hub
         uses: docker/bake-action@v2
         with:
           push: true
+          targets: base
           set: |
             *.args.DOCKERHUB_REPO=${{ env.DOCKERHUB_REPO }}
             *.args.DOCKERHUB_IMG=${{ env.DOCKERHUB_IMG }}
