MYX-152: Add Kontext+PuLID and Z-Image provisioning with refactored utilities
Shared download utilities:
- Extract download_utils.sh with get_remote_size, get_local_size, download_model
- Fix X-Linked-Size header parsing (anchor grep to avoid access-control-expose-headers match)
- Refactor provision_qwen.sh and provision_rmbg.sh to use shared utilities

New provisioning scripts:
- provision_z_image.sh for Z-Image Turbo model (~10GB)
- provision_kontext_pulid.sh for Flux Kontext + PuLID models (~25GB)

Dockerfile improvements:
- Install PuLID-FLUX custom node for character identity preservation
- Move provisioning script COPY after custom nodes for better layer caching
- Consolidate script copies into single COPY command

Runtime changes:
- start.sh: Add Z-Image and Kontext+PuLID provisioning calls
- extra_model_paths.yaml: Add pulid and insightface model paths

Build utilities:
- bin/build, bin/push, bin/test-local helper scripts

--- a/src/extra_model_paths.yaml
+++ b/src/extra_model_paths.yaml
@@ -14,3 +14,5 @@ runpod_worker_comfy:
   text_encoders: models/text_encoders/
   VLM: models/VLM/
   RMBG: models/RMBG/
+  pulid: models/pulid/
+  insightface: models/insightface/
